...
            android:id="@+id/container_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_meet"
                android:name="list.MeetFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/meeting_item" />

...
        </FrameLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/meeting_add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
...
