<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_item_sort_by"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/sort_by"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/filter_by_date_item"
                android:title="@string/filtrer_par_date" />
            <item
                android:id="@+id/filter_by_place_item"
                android:title="@string/filtrer_par_lieu" />
            <item
                android:id="@+id/remove_filter"
                android:title="@string/enlever_filtre" />
        </menu>
    </item>
</menu>