...
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_meet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/list_color"
        app:layout_constraintStart_toEndOf="@+id/list_color"
...
